--- a/myCSS.css
+++ b/myCSS.css
@@ -12,7 +12,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #9935FF;
+	background: #CC33FF;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -22,7 +22,7 @@ body {
 	
 }
 .nav {
-	background: #626262;
+	background: #CCC;
 	margin: 0px;
 	padding: 5;
 	float: left;
